# eopf-cpm

./: .coveragerc  .gitignore  .gitlab-ci.yml  .mypy.ini  .pre-commit-config.yaml  .pyre_configuration  CONTRIBUTING.md  CONTRIBUTING.rst  Pipfile  README.md  README.rst  bandit.yml  environment.yaml  envrionment.yaml  pyproject.toml
.github/workflows/: ci.yml
.gitlab/issue_templates/: bug-report.md
docs/plantuml/: collections_abc_mapping.puml  eopf.puml  eopf_product_classes.puml  eopf_product_eogroup.puml  eopf_product_eoproduct.puml  eopf_product_eovariable.puml  eopf_product_store.puml  eopf_product_use_cases.puml  eoproduct.puml
docs/source/: _redirects  conf.py  contributing.rst  eopf.computing.rst  eopf.exceptions.rst  eopf.numerical.rst  eopf.product.core.rst  eopf.product.rst  eopf.product.store.rst  eopf.remotesensing.rst  eopf.rst  eopf.tracing.rst  index.rst  installation.rst  modules.rst  tutorials.rst
docs/source/_data/S3_OL_1_EFR.zarr/: .zattrs  .zmetadata
docs/source/_data/S3_OL_1_EFR.zarr/conditions/: .zattrs
docs/source/_data/S3_OL_1_EFR.zarr/conditions/geometry/altitude/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/geometry/oaa/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/geometry/oza/: .zattrs  0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/geometry/saa/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/geometry/sza/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/instrument/frame_offset/: .zattrs  0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/instrument/fwhm/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/instrument/lambda0/: .zattrs  0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/instrument/relative_spectral_covariance/: .zattrs  0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/instrument/solar_flux/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/atmospheric_temperature_profile/: .zattrs  0.0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/horizontal_wind/: .zarray  .zattrs  0.0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/humidity/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/reference_pressure_level/: .zattrs  0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/sea_level_pressure/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/total_columnar_water_vapour/: 0.0
docs/source/_data/S3_OL_1_EFR.zarr/conditions/meteo/total_ozone/: 0.0
docs/source/_templates/: versioning.html
docs/source/api/: eopf.computing.rst  eopf.exceptions.rst  eopf.logging.rst  eopf.numerical.rst  eopf.product.core.rst  eopf.product.rst  eopf.product.store.rst  eopf.remotesensing.rst  eopf.rst  eopf.tracing.rst  eopf.triggering.rst
docs/source/developer-guide/: accessor_impl.rst  breakpoint.rst  computing_impl.rst  extend_cli.rst  index.rst  logging.rst  mapping_impl.rst  setup.rst  tracing.rst
docs/source/getting-started-guide/: index.rst
docs/source/user-guide/: configuration.rst  index.rst  product.rst  stores.rst  triggering.rst  variable.rst
eopf/: __init__.py  cli.py  conf.py  exceptions.py
eopf/computing/: __init__.py  abstract.py  breakpoint.py  general.py
eopf/computing/olci/: __init__.py  processor.py  unit.py
eopf/computing/steps/: __init__.py  convertion.py  flag.py  interpolation.py  ndvi.py
eopf/exceptions/: __init__.py  warnings.py
eopf/formatting/: __init__.py  factory.py  formatters.py  utils.py
eopf/logging/: __init__.py  log.py
eopf/logging/conf/: a_yaml.yaml  dask.yaml  default.conf  default.json  file.conf  file.json
eopf/numerical/: __init__.py
eopf/product/: __init__.py  constants.py  container.py  conveniences.py  convert.py  core.py  formatting.py  mixins.py  object.py  store.py  utils.py
eopf/product/core/: __init__.py  eo_abstract.py  eo_container.py  eo_group.py  eo_mixins.py  eo_object.py  eo_product.py  eo_variable.py
eopf/product/store/: __init__.py  abstract.py  cog.py  conveniences.py  extract_dim.py  filename_to_variable.py  flags.py  grib.py  hdf5.py  hdf5_store.py  legacy_accessor.py  manifest.py  mapping_factory.py  memmap_accessors.py  netcdf.py  rasterio.py  safe.py  store_factory.py  wrappers.py  xml.py  xml_accessors.py  xml_selector.py  zarr.py
eopf/product/store/mapping/: S1_L0_mapping.json  S1_OCN_IW_mapping.json  S1_OCN_SM_mapping.json  S1_OCN_WV_mapping.json  S2_L0_mapping.json  S2_MSIL1C_mapping.json  S2_MSIL2A_mapping.json  S3_L0_mapping.json  S3_OL_1_EFR_mapping.json  S3_OL_2_LFR_mapping.json  S3_SL_1_RBT_mapping.json  S3_SL_2_LST_mapping.json  S3_SR_2_LAN_mapping.json  S3_SR_2_mapping.json  S3_SY_2_SYN_mapping.json
eopf/product/templates/: attrs.html  group.html  metadata.html  obj_repr.html  product.html  variable.html
eopf/product/templates/static/css/: style.css
eopf/qualitycontrol/: __init__.py  eo_qc.py  eo_qc_config.py  eo_qc_processor.py
eopf/qualitycontrol/configs/: common_qc.json  qc.json
eopf/qualitycontrol/configs/olci/: __init__.py  l1.py
eopf/qualitycontrol/triggering/: qc_processor.json
eopf/serde/: __init__.py
eopf/tracing/: __init__.py  profiler.py  prometheus-cpm.yml
eopf/triggering/: __init__.py  abstract.py  cli.py  dask_configuration.py  event.py  trigger.py  web.py  workflow.py
eopf/triggering/conf/: dask_configuration.py
eopf/triggering/parser/: dask_context.py  general.py  io.py  workflow.py
tests/: conftest.py  decoder.py  files_fixtures.py  pyproject.toml  test_cli.py  test_configuration.py  test_conveniences.py  test_convert.py  test_convert_ocn.py  test_eo_container.py  test_eo_variable.py  test_hdf5_store.py  test_log.py  test_product.py  test_product_store.py  test_profiler.py  test_qc_processor.py  test_safe_store_mappings.py  test_store_factory.py  test_sub_store.py  test_xml_functions.py  utils.py
tests/computing/: test_abstract.py  test_breakpoint.py
tests/data/: AUX_ECMWFT.grib.923a8.idx  MTD_TL.xml  a_yaml_log_conf.yaml  common_qc.json  log_conf.conf  log_conf.json  log_conf.yam  test_qc.json  test_safe_mapping.json  trigger.json
tests/triggering/: test_trigger.py
(+61 files in other folders)
